--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./server/tests/*.test.js" 
   },
   "author": "Omar Ali",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^2.2.33"
+    "body-parser": "^1.15.2",
+    "express": "^4.16.3",
+    "mongodb": "^2.2.33",
+    "mongoose": "^4.5.9"
+  },
+  "devDependencies": {
+    "expect": "^23.4.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.3",
+    "supertest": "^3.1.0"
   }
 }
