--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "todo-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha ./server/tests/*.test.js" 
-  },
-  "author": "Omar Ali",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.16.3",
-    "mongodb": "^2.2.33",
-    "mongoose": "^4.5.9"
-  },
-  "devDependencies": {
-    "expect": "^23.4.0",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.3",
-    "supertest": "^3.1.0"
-  }
+    "name": "todo-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node server/server.js",
+        "test": "mocha ./server/tests/*.test.js"
+    },
+    "author": "Omar Ali",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.15.2",
+        "express": "^4.16.3",
+        "mongodb": "^2.2.33",
+        "mongoose": "^4.5.9"
+    },
+    "engines" : {
+        "node" : "8.11.3"
+    },
+    "devDependencies": {
+        "expect": "^23.4.0",
+        "mocha": "^5.2.0",
+        "nodemon": "^1.18.3",
+        "supertest": "^3.1.0"
+    }
 }
