--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
     "main": "index.js",
     "scripts": {
         "start": "node server/server.js",
-        "test": "mocha ./server/tests/*.test.js"
+        "test": "mocha ./server/tests/*.test.js",
+        "test-watch": "nodemon --exec \"npm test\""
     },
     "author": "Omar Ali",
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.15.2",
         "express": "^4.16.3",
+        "lodash": "^4.17.10",
         "mongodb": "^2.2.33",
         "mongoose": "^4.5.9"
     },
-    "engines" : {
-        "node" : "8.11.3"
+    "engines": {
+        "node": "8.11.3"
     },
     "devDependencies": {
         "expect": "^23.4.0",
